--- a/files/2_73发送进度条/styles.css
+++ b/files/2_73发送进度条/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:900px;
+  width:720px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -14,19 +14,37 @@
 }
 #u0 {
   position:absolute;
+  left:-180px;
+  top:0px;
+}
+#u0_state0 {
+  position:relative;
   left:0px;
+  top:0px;
+  background-image:none;
+}
+#u0_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u1 {
+  position:absolute;
+  left:180px;
   top:0px;
   width:900px;
   height:605px;
 }
-#u0_img {
+#u1_img {
   position:absolute;
   left:0px;
   top:0px;
   width:900px;
   height:605px;
 }
-#u1 {
+#u2 {
   position:absolute;
   left:2px;
   top:294px;
@@ -34,155 +52,130 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u2 {
-  position:absolute;
-  left:341px;
-  top:577px;
-  width:353px;
-  height:16px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:16px;
-}
-#u2_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:353px;
-  height:16px;
-}
 #u3 {
   position:absolute;
-  left:0px;
-  top:0px;
-  width:353px;
-  white-space:nowrap;
-}
-#u4 {
-  position:absolute;
-  left:30px;
+  left:251px;
   top:31px;
   width:429px;
   height:28px;
 }
-#u4_img {
+#u3_img {
   position:absolute;
   left:0px;
   top:0px;
   width:429px;
   height:28px;
 }
-#u5 {
+#u4 {
   position:absolute;
   left:0px;
   top:0px;
   width:429px;
   white-space:nowrap;
 }
-#u6 {
+#u5 {
   position:absolute;
-  left:73px;
+  left:274px;
   top:120px;
   width:100px;
   height:88px;
 }
-#u6_img {
+#u5_img {
   position:absolute;
   left:0px;
   top:0px;
   width:100px;
   height:88px;
+}
+#u6 {
+  position:absolute;
+  left:2px;
+  top:36px;
+  width:96px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u7 {
   position:absolute;
-  left:2px;
-  top:36px;
-  width:96px;
-  visibility:hidden;
-  word-wrap:break-word;
+  left:271px;
+  top:218px;
+  width:112px;
+  height:23px;
+  font-size:20px;
+}
+#u7_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:112px;
+  height:23px;
 }
 #u8 {
   position:absolute;
-  left:70px;
-  top:218px;
-  width:112px;
-  height:23px;
-  font-size:20px;
-}
-#u8_img {
-  position:absolute;
   left:0px;
   top:0px;
   width:112px;
-  height:23px;
+  white-space:nowrap;
 }
 #u9 {
   position:absolute;
+  left:434px;
+  top:120px;
+  width:100px;
+  height:88px;
+}
+#u9_img {
+  position:absolute;
   left:0px;
   top:0px;
-  width:112px;
-  white-space:nowrap;
+  width:100px;
+  height:88px;
 }
 #u10 {
   position:absolute;
-  left:233px;
-  top:120px;
-  width:100px;
-  height:88px;
-}
-#u10_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:100px;
-  height:88px;
+  left:2px;
+  top:36px;
+  width:96px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u11 {
   position:absolute;
-  left:2px;
-  top:36px;
-  width:96px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u12 {
-  position:absolute;
-  left:266px;
+  left:467px;
   top:218px;
   width:35px;
   height:23px;
   font-size:20px;
 }
-#u12_img {
+#u11_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:23px;
 }
-#u13 {
+#u12 {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   white-space:nowrap;
 }
-#u14 {
+#u13 {
   position:absolute;
-  left:400px;
+  left:601px;
   top:120px;
   width:100px;
   height:88px;
 }
-#u14_img {
+#u13_img {
   position:absolute;
   left:0px;
   top:0px;
   width:100px;
   height:88px;
 }
-#u15 {
+#u14 {
   position:absolute;
   left:2px;
   top:36px;
@@ -190,87 +183,87 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u16 {
+#u15 {
   position:absolute;
-  left:418px;
+  left:619px;
   top:218px;
   width:64px;
   height:23px;
   font-size:20px;
 }
-#u16_img {
+#u15_img {
   position:absolute;
   left:0px;
   top:0px;
   width:64px;
   height:23px;
+}
+#u16 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:64px;
+  white-space:nowrap;
 }
 #u17 {
   position:absolute;
+  left:769px;
+  top:123px;
+  width:79px;
+  height:92px;
+}
+#u17_img {
+  position:absolute;
   left:0px;
   top:0px;
-  width:64px;
-  white-space:nowrap;
+  width:79px;
+  height:92px;
 }
 #u18 {
   position:absolute;
-  left:568px;
-  top:123px;
-  width:79px;
-  height:92px;
-}
-#u18_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:79px;
-  height:92px;
+  left:2px;
+  top:38px;
+  width:75px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
 #u19 {
   position:absolute;
-  left:2px;
-  top:38px;
-  width:75px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u20 {
-  position:absolute;
-  left:590px;
+  left:791px;
   top:225px;
   width:35px;
   height:23px;
   font-size:20px;
 }
-#u20_img {
+#u19_img {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   height:23px;
 }
-#u21 {
+#u20 {
   position:absolute;
   left:0px;
   top:0px;
   width:35px;
   white-space:nowrap;
 }
-#u22 {
+#u21 {
   position:absolute;
-  left:735px;
+  left:936px;
   top:123px;
   width:79px;
   height:92px;
 }
-#u22_img {
+#u21_img {
   position:absolute;
   left:0px;
   top:0px;
   width:79px;
   height:92px;
 }
-#u23 {
+#u22 {
   position:absolute;
   left:2px;
   top:38px;
@@ -278,43 +271,43 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u24 {
+#u23 {
   position:absolute;
-  left:754px;
+  left:955px;
   top:225px;
   width:34px;
   height:23px;
   font-size:20px;
 }
-#u24_img {
+#u23_img {
   position:absolute;
   left:0px;
   top:0px;
   width:34px;
   height:23px;
 }
-#u25 {
+#u24 {
   position:absolute;
   left:0px;
   top:0px;
   width:34px;
   white-space:nowrap;
 }
-#u26 {
+#u25 {
   position:absolute;
-  left:250px;
+  left:451px;
   top:288px;
   width:120px;
   height:84px;
 }
-#u26_img {
+#u25_img {
   position:absolute;
   left:0px;
   top:0px;
   width:120px;
   height:84px;
 }
-#u27 {
+#u26 {
   position:absolute;
   left:2px;
   top:34px;
@@ -322,9 +315,9 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u28 {
+#u27 {
   position:absolute;
-  left:275px;
+  left:476px;
   top:382px;
   width:78px;
   height:21px;
@@ -333,35 +326,35 @@
   font-style:normal;
   font-size:20px;
 }
-#u28_img {
+#u27_img {
   position:absolute;
   left:0px;
   top:0px;
   width:78px;
   height:21px;
 }
-#u29 {
+#u28 {
   position:absolute;
   left:0px;
   top:0px;
   width:78px;
   white-space:nowrap;
 }
-#u30 {
+#u29 {
   position:absolute;
-  left:568px;
+  left:769px;
   top:288px;
   width:106px;
   height:100px;
 }
-#u30_img {
+#u29_img {
   position:absolute;
   left:0px;
   top:0px;
   width:106px;
   height:100px;
 }
-#u31 {
+#u30 {
   position:absolute;
   left:2px;
   top:42px;
@@ -369,43 +362,43 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u32 {
+#u31 {
   position:absolute;
-  left:575px;
+  left:776px;
   top:388px;
   width:99px;
   height:23px;
   font-size:20px;
 }
-#u32_img {
+#u31_img {
   position:absolute;
   left:0px;
   top:0px;
   width:99px;
   height:23px;
 }
-#u33 {
+#u32 {
   position:absolute;
   left:0px;
   top:0px;
   width:99px;
   white-space:nowrap;
 }
-#u34 {
+#u33 {
   position:absolute;
-  left:70px;
+  left:271px;
   top:290px;
   width:130px;
   height:81px;
 }
-#u34_img {
+#u33_img {
   position:absolute;
   left:0px;
   top:0px;
   width:130px;
   height:81px;
 }
-#u35 {
+#u34 {
   position:absolute;
   left:2px;
   top:32px;
@@ -413,9 +406,9 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u36 {
+#u35 {
   position:absolute;
-  left:98px;
+  left:299px;
   top:384px;
   width:75px;
   height:21px;
@@ -424,35 +417,35 @@
   font-style:normal;
   font-size:20px;
 }
-#u36_img {
+#u35_img {
   position:absolute;
   left:0px;
   top:0px;
   width:75px;
   height:21px;
 }
-#u37 {
+#u36 {
   position:absolute;
   left:0px;
   top:0px;
   width:75px;
   white-space:nowrap;
 }
-#u38 {
+#u37 {
   position:absolute;
-  left:418px;
+  left:619px;
   top:278px;
   width:102px;
   height:112px;
 }
-#u38_img {
+#u37_img {
   position:absolute;
   left:0px;
   top:0px;
   width:102px;
   height:112px;
 }
-#u39 {
+#u38 {
   position:absolute;
   left:2px;
   top:48px;
@@ -460,9 +453,9 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u40 {
+#u39 {
   position:absolute;
-  left:418px;
+  left:619px;
   top:390px;
   width:110px;
   height:21px;
@@ -471,35 +464,35 @@
   font-style:normal;
   font-size:20px;
 }
-#u40_img {
+#u39_img {
   position:absolute;
   left:0px;
   top:0px;
   width:110px;
   height:21px;
 }
-#u41 {
+#u40 {
   position:absolute;
   left:0px;
   top:0px;
   width:110px;
   white-space:nowrap;
 }
-#u42 {
+#u41 {
   position:absolute;
-  left:746px;
+  left:947px;
   top:296px;
   width:79px;
   height:92px;
 }
-#u42_img {
+#u41_img {
   position:absolute;
   left:0px;
   top:0px;
   width:79px;
   height:92px;
 }
-#u43 {
+#u42 {
   position:absolute;
   left:2px;
   top:38px;
@@ -507,9 +500,9 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u44 {
+#u43 {
   position:absolute;
-  left:750px;
+  left:951px;
   top:398px;
   width:81px;
   height:21px;
@@ -518,23 +511,23 @@
   font-style:normal;
   font-size:20px;
 }
-#u44_img {
+#u43_img {
   position:absolute;
   left:0px;
   top:0px;
   width:81px;
   height:21px;
 }
-#u45 {
+#u44 {
   position:absolute;
   left:0px;
   top:0px;
   width:81px;
   white-space:nowrap;
 }
-#u46 {
+#u45 {
   position:absolute;
-  left:30px;
+  left:251px;
   top:69px;
   width:115px;
   height:16px;
@@ -543,36 +536,520 @@
   font-style:normal;
   font-size:16px;
 }
-#u46_img {
+#u45_img {
   position:absolute;
   left:0px;
   top:0px;
   width:115px;
   height:16px;
 }
-#u47 {
+#u46 {
   position:absolute;
   left:0px;
   top:0px;
   width:115px;
   white-space:nowrap;
 }
+#u47 {
+  position:absolute;
+  left:250px;
+  top:104px;
+  width:148px;
+  height:144px;
+}
+#u47_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:148px;
+  height:144px;
+}
 #u48 {
   position:absolute;
+  left:2px;
+  top:64px;
+  width:144px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u49 {
+  position:absolute;
   left:0px;
+  top:0px;
+}
+#u49_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u49_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u50 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u50_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u51 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u52 {
+  position:absolute;
+  left:40px;
+  top:165px;
+  width:200px;
+  height:10px;
+}
+#u52_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u52_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u52_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u53 {
+  position:absolute;
+  left:199px;
+  top:206px;
+  width:21px;
+  height:84px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u53_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:84px;
+}
+#u54 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  white-space:nowrap;
+}
+#u55 {
+  position:absolute;
+  left:199px;
+  top:109px;
+  width:21px;
+  height:42px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u55_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:42px;
+}
+#u56 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  white-space:nowrap;
+}
+#u49_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u49_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u57 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u57_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u58 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u59 {
+  position:absolute;
+  left:70px;
+  top:64px;
+  width:97px;
+  height:25px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+}
+#u59_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  height:25px;
+}
+#u60 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  white-space:nowrap;
+}
+#u61 {
+  position:absolute;
+  left:21px;
+  top:162px;
+  width:200px;
+  height:10px;
+}
+#u61_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u61_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u61_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u62 {
+  position:absolute;
+  left:70px;
+  top:205px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u62_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u63 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u64 {
+  position:absolute;
+  left:70px;
+  top:255px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u64_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u65 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u66 {
+  position:absolute;
+  left:70px;
+  top:306px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u66_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u67 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u68 {
+  position:absolute;
+  left:70px;
+  top:356px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u68_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u69 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u70 {
+  position:absolute;
+  left:70px;
+  top:406px;
+  width:61px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u70_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  height:21px;
+}
+#u71 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  white-space:nowrap;
+}
+#u72 {
+  position:absolute;
+  left:48px;
+  top:195px;
+  width:121px;
+  height:39px;
+}
+#u72_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:121px;
+  height:39px;
+}
+#u73 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:117px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u74 {
+  position:absolute;
+  left:48px;
+  top:108px;
+}
+#u74_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u74_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u75 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u75_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u76 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
+}
+#u74_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u74_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u77 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u77_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u78 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
+}
+#u79 {
+  position:absolute;
+  left:430px;
+  top:574px;
+  width:401px;
+  height:16px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:16px;
+}
+#u79_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:401px;
+  height:16px;
+}
+#u80 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:401px;
+  white-space:nowrap;
+}
+#u81 {
+  position:absolute;
+  left:180px;
   top:0px;
   width:900px;
   height:605px;
-  opacity:0.699999988079071;
+  opacity:0.600000023841858;
 }
-#u48_img {
+#u81_img {
   position:absolute;
   left:0px;
   top:0px;
   width:900px;
   height:605px;
 }
-#u49 {
+#u82 {
   position:absolute;
   left:2px;
   top:294px;
@@ -580,7 +1057,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u50 {
+#u83 {
   position:absolute;
   left:30px;
   top:490px;
@@ -588,14 +1065,14 @@
   height:59px;
   color:#FFFFFF;
 }
-#u50_img {
+#u83_img {
   position:absolute;
   left:0px;
   top:0px;
   width:835px;
   height:59px;
 }
-#u51 {
+#u84 {
   position:absolute;
   left:2px;
   top:22px;
@@ -603,7 +1080,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u52 {
+#u85 {
   position:absolute;
   left:30px;
   top:490px;
@@ -614,21 +1091,21 @@
   font-style:normal;
   color:#FFFFFF;
 }
-#u52_img {
+#u85_img {
   position:absolute;
   left:0px;
   top:0px;
   width:644px;
   height:59px;
 }
-#u53 {
+#u86 {
   position:absolute;
   left:2px;
   top:23px;
   width:640px;
   word-wrap:break-word;
 }
-#u54 {
+#u87 {
   position:absolute;
   left:157px;
   top:647px;
@@ -636,14 +1113,14 @@
   height:16px;
   font-size:16px;
 }
-#u54_img {
+#u87_img {
   position:absolute;
   left:0px;
   top:0px;
   width:129px;
   height:16px;
 }
-#u55 {
+#u88 {
   position:absolute;
   left:0px;
   top:0px;
