--- a/files/2_4文件列表页-缩略图/styles.css
+++ b/files/2_4文件列表页-缩略图/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:950px;
+  width:770px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -36,7 +36,7 @@
 }
 #u2 {
   position:absolute;
-  left:30px;
+  left:71px;
   top:31px;
   width:429px;
   height:28px;
@@ -57,7 +57,7 @@
 }
 #u4 {
   position:absolute;
-  left:73px;
+  left:94px;
   top:120px;
   width:100px;
   height:88px;
@@ -79,7 +79,7 @@
 }
 #u6 {
   position:absolute;
-  left:70px;
+  left:91px;
   top:218px;
   width:112px;
   height:23px;
@@ -101,7 +101,7 @@
 }
 #u8 {
   position:absolute;
-  left:233px;
+  left:254px;
   top:120px;
   width:100px;
   height:88px;
@@ -123,7 +123,7 @@
 }
 #u10 {
   position:absolute;
-  left:266px;
+  left:287px;
   top:218px;
   width:35px;
   height:23px;
@@ -145,7 +145,7 @@
 }
 #u12 {
   position:absolute;
-  left:400px;
+  left:421px;
   top:120px;
   width:100px;
   height:88px;
@@ -167,7 +167,7 @@
 }
 #u14 {
   position:absolute;
-  left:418px;
+  left:439px;
   top:218px;
   width:64px;
   height:23px;
@@ -189,7 +189,7 @@
 }
 #u16 {
   position:absolute;
-  left:568px;
+  left:589px;
   top:123px;
   width:79px;
   height:92px;
@@ -211,7 +211,7 @@
 }
 #u18 {
   position:absolute;
-  left:590px;
+  left:611px;
   top:225px;
   width:35px;
   height:23px;
@@ -233,7 +233,7 @@
 }
 #u20 {
   position:absolute;
-  left:735px;
+  left:756px;
   top:123px;
   width:79px;
   height:92px;
@@ -255,7 +255,7 @@
 }
 #u22 {
   position:absolute;
-  left:754px;
+  left:775px;
   top:225px;
   width:34px;
   height:23px;
@@ -277,7 +277,7 @@
 }
 #u24 {
   position:absolute;
-  left:250px;
+  left:271px;
   top:288px;
   width:120px;
   height:84px;
@@ -299,7 +299,7 @@
 }
 #u26 {
   position:absolute;
-  left:275px;
+  left:296px;
   top:382px;
   width:78px;
   height:21px;
@@ -324,7 +324,7 @@
 }
 #u28 {
   position:absolute;
-  left:568px;
+  left:589px;
   top:288px;
   width:106px;
   height:100px;
@@ -346,7 +346,7 @@
 }
 #u30 {
   position:absolute;
-  left:575px;
+  left:596px;
   top:388px;
   width:99px;
   height:23px;
@@ -368,7 +368,7 @@
 }
 #u32 {
   position:absolute;
-  left:70px;
+  left:91px;
   top:290px;
   width:130px;
   height:81px;
@@ -390,7 +390,7 @@
 }
 #u34 {
   position:absolute;
-  left:98px;
+  left:119px;
   top:384px;
   width:75px;
   height:21px;
@@ -415,7 +415,7 @@
 }
 #u36 {
   position:absolute;
-  left:418px;
+  left:439px;
   top:278px;
   width:102px;
   height:112px;
@@ -437,7 +437,7 @@
 }
 #u38 {
   position:absolute;
-  left:418px;
+  left:439px;
   top:390px;
   width:110px;
   height:21px;
@@ -462,7 +462,7 @@
 }
 #u40 {
   position:absolute;
-  left:746px;
+  left:767px;
   top:296px;
   width:79px;
   height:92px;
@@ -484,7 +484,7 @@
 }
 #u42 {
   position:absolute;
-  left:750px;
+  left:771px;
   top:398px;
   width:81px;
   height:21px;
@@ -509,7 +509,7 @@
 }
 #u44 {
   position:absolute;
-  left:330px;
+  left:351px;
   top:660px;
   width:7px;
   height:-241px;
@@ -563,7 +563,7 @@
 }
 #u48 {
   position:absolute;
-  left:774px;
+  left:795px;
   top:650px;
   width:0px;
   height:-240px;
@@ -610,7 +610,7 @@
 }
 #u52 {
   position:absolute;
-  left:40px;
+  left:109px;
   top:650px;
   width:0px;
   height:-580px;
@@ -618,35 +618,14 @@
 #u52_seg0 {
   position:absolute;
   left:-10px;
-  top:-402px;
+  top:-584px;
   width:20px;
-  height:406px;
-}
-#u52_seg1 {
-  position:absolute;
-  left:-11px;
-  top:-402px;
-  width:21px;
-  height:20px;
-}
-#u52_seg2 {
-  position:absolute;
-  left:-11px;
-  top:-590px;
-  width:20px;
-  height:208px;
-}
-#u52_seg3 {
-  position:absolute;
-  left:-11px;
-  top:-590px;
-  width:15px;
-  height:20px;
+  height:594px;
 }
 #u53 {
   position:absolute;
   left:-50px;
-  top:-299px;
+  top:-298px;
   width:100px;
   visibility:hidden;
   word-wrap:break-word;
@@ -700,7 +679,7 @@
 }
 #u58 {
   position:absolute;
-  left:30px;
+  left:71px;
   top:69px;
   width:115px;
   height:16px;
@@ -725,48 +704,485 @@
 }
 #u60 {
   position:absolute;
-  left:341px;
-  top:577px;
-  width:353px;
-  height:16px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-  font-size:16px;
+  left:70px;
+  top:104px;
+  width:148px;
+  height:144px;
 }
 #u60_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:353px;
-  height:16px;
+  width:148px;
+  height:144px;
 }
 #u61 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:353px;
-  white-space:nowrap;
-}
-#u62 {
-  position:absolute;
-  left:49px;
-  top:104px;
-  width:148px;
-  height:144px;
-}
-#u62_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:148px;
-  height:144px;
-}
-#u63 {
   position:absolute;
   left:2px;
   top:64px;
   width:144px;
   visibility:hidden;
   word-wrap:break-word;
+}
+#u62 {
+  position:absolute;
+  left:-180px;
+  top:0px;
+}
+#u62_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u62_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u63 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u63_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u64 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u65 {
+  position:absolute;
+  left:40px;
+  top:165px;
+  width:200px;
+  height:10px;
+}
+#u65_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u65_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u65_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u66 {
+  position:absolute;
+  left:199px;
+  top:206px;
+  width:21px;
+  height:84px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u66_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:84px;
+}
+#u67 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  white-space:nowrap;
+}
+#u68 {
+  position:absolute;
+  left:199px;
+  top:109px;
+  width:21px;
+  height:42px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u68_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:42px;
+}
+#u69 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  white-space:nowrap;
+}
+#u62_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u62_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u70 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u70_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u71 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u72 {
+  position:absolute;
+  left:70px;
+  top:64px;
+  width:97px;
+  height:25px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+}
+#u72_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  height:25px;
+}
+#u73 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  white-space:nowrap;
+}
+#u74 {
+  position:absolute;
+  left:21px;
+  top:162px;
+  width:200px;
+  height:10px;
+}
+#u74_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u74_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u74_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u75 {
+  position:absolute;
+  left:70px;
+  top:205px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u75_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u76 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u77 {
+  position:absolute;
+  left:70px;
+  top:255px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u77_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u78 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u79 {
+  position:absolute;
+  left:70px;
+  top:306px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u79_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u80 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u81 {
+  position:absolute;
+  left:70px;
+  top:356px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u81_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u82 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u83 {
+  position:absolute;
+  left:70px;
+  top:406px;
+  width:61px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u83_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  height:21px;
+}
+#u84 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  white-space:nowrap;
+}
+#u85 {
+  position:absolute;
+  left:48px;
+  top:195px;
+  width:121px;
+  height:39px;
+}
+#u85_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:121px;
+  height:39px;
+}
+#u86 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:117px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u87 {
+  position:absolute;
+  left:48px;
+  top:108px;
+}
+#u87_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u87_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u88 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u88_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u89 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
+}
+#u87_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u87_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u90 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u90_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u91 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
+}
+#u92 {
+  position:absolute;
+  left:250px;
+  top:574px;
+  width:401px;
+  height:16px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:16px;
+}
+#u92_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:401px;
+  height:16px;
+}
+#u93 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:401px;
+  white-space:nowrap;
 }
