--- a/files/2_5文件列表页－列表/styles.css
+++ b/files/2_5文件列表页－列表/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:900px;
+  width:720px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -36,7 +36,7 @@
 }
 #u2 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:31px;
   width:429px;
   height:28px;
@@ -57,7 +57,7 @@
 }
 #u4 {
   position:absolute;
-  left:40px;
+  left:79px;
   top:92px;
   width:40px;
   height:35px;
@@ -79,7 +79,7 @@
 }
 #u6 {
   position:absolute;
-  left:98px;
+  left:137px;
   top:101px;
   width:112px;
   height:23px;
@@ -101,7 +101,7 @@
 }
 #u8 {
   position:absolute;
-  left:49px;
+  left:88px;
   top:536px;
   width:35px;
   height:47px;
@@ -123,7 +123,7 @@
 }
 #u10 {
   position:absolute;
-  left:100px;
+  left:139px;
   top:548px;
   width:35px;
   height:23px;
@@ -145,7 +145,7 @@
 }
 #u12 {
   position:absolute;
-  left:34px;
+  left:73px;
   top:337px;
   width:70px;
   height:49px;
@@ -167,7 +167,7 @@
 }
 #u14 {
   position:absolute;
-  left:122px;
+  left:161px;
   top:351px;
   width:78px;
   height:21px;
@@ -192,7 +192,7 @@
 }
 #u16 {
   position:absolute;
-  left:38px;
+  left:77px;
   top:469px;
   width:57px;
   height:54px;
@@ -214,7 +214,7 @@
 }
 #u18 {
   position:absolute;
-  left:98px;
+  left:137px;
   top:485px;
   width:99px;
   height:23px;
@@ -236,7 +236,7 @@
 }
 #u20 {
   position:absolute;
-  left:34px;
+  left:73px;
   top:270px;
   width:64px;
   height:40px;
@@ -258,7 +258,7 @@
 }
 #u22 {
   position:absolute;
-  left:116px;
+  left:155px;
   top:289px;
   width:75px;
   height:21px;
@@ -283,7 +283,7 @@
 }
 #u24 {
   position:absolute;
-  left:40px;
+  left:79px;
   top:404px;
   width:52px;
   height:57px;
@@ -305,7 +305,7 @@
 }
 #u26 {
   position:absolute;
-  left:98px;
+  left:137px;
   top:425px;
   width:110px;
   height:21px;
@@ -330,7 +330,7 @@
 }
 #u28 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:130px;
   width:200px;
   height:10px;
@@ -358,7 +358,7 @@
 }
 #u29 {
   position:absolute;
-  left:40px;
+  left:79px;
   top:148px;
   width:40px;
   height:35px;
@@ -380,7 +380,7 @@
 }
 #u31 {
   position:absolute;
-  left:98px;
+  left:137px;
   top:157px;
   width:112px;
   height:23px;
@@ -402,7 +402,7 @@
 }
 #u33 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:190px;
   width:200px;
   height:10px;
@@ -430,7 +430,7 @@
 }
 #u34 {
   position:absolute;
-  left:40px;
+  left:79px;
   top:210px;
   width:40px;
   height:35px;
@@ -452,7 +452,7 @@
 }
 #u36 {
   position:absolute;
-  left:98px;
+  left:137px;
   top:217px;
   width:112px;
   height:23px;
@@ -474,7 +474,7 @@
 }
 #u38 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:252px;
   width:200px;
   height:10px;
@@ -502,7 +502,7 @@
 }
 #u39 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:319px;
   width:200px;
   height:10px;
@@ -530,7 +530,7 @@
 }
 #u40 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:390px;
   width:200px;
   height:10px;
@@ -558,7 +558,7 @@
 }
 #u41 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:457px;
   width:200px;
   height:10px;
@@ -586,7 +586,7 @@
 }
 #u42 {
   position:absolute;
-  left:30px;
+  left:69px;
   top:522px;
   width:200px;
   height:10px;
@@ -614,7 +614,7 @@
 }
 #u43 {
   position:absolute;
-  left:220px;
+  left:259px;
   top:94px;
   width:21px;
   height:37px;
@@ -640,7 +640,7 @@
 }
 #u45 {
   position:absolute;
-  left:220px;
+  left:259px;
   top:150px;
   width:21px;
   height:37px;
@@ -666,7 +666,7 @@
 }
 #u47 {
   position:absolute;
-  left:220px;
+  left:259px;
   top:210px;
   width:21px;
   height:37px;
@@ -692,7 +692,7 @@
 }
 #u49 {
   position:absolute;
-  left:310px;
+  left:320px;
   top:118px;
   width:530px;
   height:343px;
@@ -714,7 +714,7 @@
 }
 #u51 {
   position:absolute;
-  left:310px;
+  left:322px;
   top:511px;
   width:75px;
   height:21px;
@@ -739,28 +739,7 @@
 }
 #u53 {
   position:absolute;
-  left:319px;
-  top:630px;
-  width:157px;
-  height:26px;
-}
-#u53_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:157px;
-  height:26px;
-}
-#u54 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:157px;
-  white-space:nowrap;
-}
-#u55 {
-  position:absolute;
-  left:661px;
+  left:673px;
   top:511px;
   width:153px;
   height:21px;
@@ -769,35 +748,35 @@
   font-style:normal;
   font-size:20px;
 }
-#u55_img {
+#u53_img {
   position:absolute;
   left:0px;
   top:0px;
   width:153px;
   height:21px;
 }
-#u56 {
+#u54 {
   position:absolute;
   left:0px;
   top:0px;
   width:153px;
   white-space:nowrap;
 }
-#u57 {
+#u55 {
   position:absolute;
-  left:14px;
+  left:53px;
   top:266px;
   width:210px;
   height:49px;
 }
-#u57_img {
+#u55_img {
   position:absolute;
   left:0px;
   top:0px;
   width:210px;
   height:49px;
 }
-#u58 {
+#u56 {
   position:absolute;
   left:2px;
   top:16px;
@@ -805,28 +784,465 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u59 {
+#u57 {
   position:absolute;
-  left:341px;
-  top:577px;
-  width:353px;
+  left:250px;
+  top:574px;
+  width:401px;
   height:16px;
   font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
   font-weight:200;
   font-style:normal;
   font-size:16px;
 }
-#u59_img {
+#u57_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:353px;
+  width:401px;
   height:16px;
+}
+#u58 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:401px;
+  white-space:nowrap;
+}
+#u59 {
+  position:absolute;
+  left:-180px;
+  top:0px;
+}
+#u59_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u59_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
 }
 #u60 {
   position:absolute;
   left:0px;
   top:0px;
-  width:353px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u60_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u61 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u62 {
+  position:absolute;
+  left:40px;
+  top:165px;
+  width:200px;
+  height:10px;
+}
+#u62_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u62_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u62_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u63 {
+  position:absolute;
+  left:199px;
+  top:206px;
+  width:21px;
+  height:84px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u63_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:84px;
+}
+#u64 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
   white-space:nowrap;
+}
+#u65 {
+  position:absolute;
+  left:199px;
+  top:109px;
+  width:21px;
+  height:42px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u65_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  height:42px;
+}
+#u66 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:21px;
+  white-space:nowrap;
+}
+#u59_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u59_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u67 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+  opacity:0.899999976158142;
+}
+#u67_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:240px;
+  height:605px;
+}
+#u68 {
+  position:absolute;
+  left:2px;
+  top:294px;
+  width:236px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u69 {
+  position:absolute;
+  left:70px;
+  top:64px;
+  width:97px;
+  height:25px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+}
+#u69_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  height:25px;
+}
+#u70 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:97px;
+  white-space:nowrap;
+}
+#u71 {
+  position:absolute;
+  left:21px;
+  top:162px;
+  width:200px;
+  height:10px;
+}
+#u71_start {
+  position:absolute;
+  left:0px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u71_end {
+  position:absolute;
+  left:183px;
+  top:-5px;
+  width:18px;
+  height:20px;
+}
+#u71_line {
+  position:absolute;
+  left:0px;
+  top:5px;
+  width:200px;
+  height:1px;
+}
+#u72 {
+  position:absolute;
+  left:70px;
+  top:205px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u72_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u73 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u74 {
+  position:absolute;
+  left:70px;
+  top:255px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u74_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u75 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u76 {
+  position:absolute;
+  left:70px;
+  top:306px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u76_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u77 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u78 {
+  position:absolute;
+  left:70px;
+  top:356px;
+  width:81px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u78_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  height:21px;
+}
+#u79 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:81px;
+  white-space:nowrap;
+}
+#u80 {
+  position:absolute;
+  left:70px;
+  top:406px;
+  width:61px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+}
+#u80_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  height:21px;
+}
+#u81 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:61px;
+  white-space:nowrap;
+}
+#u82 {
+  position:absolute;
+  left:48px;
+  top:195px;
+  width:121px;
+  height:39px;
+}
+#u82_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:121px;
+  height:39px;
+}
+#u83 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:117px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u84 {
+  position:absolute;
+  left:48px;
+  top:108px;
+}
+#u84_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u84_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u85 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u85_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u86 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
+}
+#u84_state1 {
+  position:relative;
+  left:0px;
+  top:0px;
+  visibility:hidden;
+  background-image:none;
+}
+#u84_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u87 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+  font-size:20px;
+}
+#u87_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:134px;
+  height:44px;
+}
+#u88 {
+  position:absolute;
+  left:2px;
+  top:12px;
+  width:130px;
+  word-wrap:break-word;
 }
